:iphone:Mobile main fix spacing

--- a/src/components/AhShit/AhShit.css
+++ b/src/components/AhShit/AhShit.css
@@ -165,7 +165,7 @@
     width: 46.8vw;
     height: auto;
     left: 16.6vw;
-    top: 12.5vh;
+    top: 10vh;
     margin: 0;
     display: unset;
     visibility: unset;
